--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,11 @@ html, body {
   height: 100%;
   width: 100%;
 }
+.color_white{color: #fff;}
 
 /* padded section */
-.pad-section {
-  padding: 50px 0;
-}
-.pad-section img {
-  width: 100%;
-}
+.pad_section{ padding: 50px 0;}
+/*.pad-section img {width: 100%;}*/
 
 /* vertical-centered text */
 .text-vcenter {
@@ -19,7 +16,8 @@ html, body {
   text-align: center;
   vertical-align: middle;
 }
-.text-vcenter h1 {
+.vcenter{margin-top: 30%;}
+.custom_heading {
   font-size: 4.5em;
   font-weight: 700;
   margin: 0;
@@ -30,7 +28,7 @@ html, body {
 #home {
   background: url(../images/home.jpg) no-repeat center center fixed;
   display: table;
-  height: 100%;
+  height: 80%;
   position: relative;
   width: 100%;
   -webkit-background-size: cover;
@@ -46,7 +44,7 @@ html, body {
   background-color: #306d9f;
   color: #ffffff;
 }
-#services .glyphicon {
+.custom_glyphicon {
   border: 2px solid #FFFFFF;
   border-radius: 50%;
   display: inline-block;
@@ -69,13 +67,9 @@ html, body {
   -o-background-size: cover;
   background-size: cover;
 }
-#information .panel {
-  opacity: 0.85;
-}
+.custom_panel { opacity: 0.85;}
 
-#google_map {
-  height: 500px;
-}
+
 
 footer {
   padding: 20px 0;
